--- a/scripts/03_deploy-teal-from-file-typescript/package.json
+++ b/scripts/03_deploy-teal-from-file-typescript/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "algosdk": "^1.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.8"
   }
 }
